--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,8 @@
-Django==4.2  # Adjust version as per your project setup
-pymongo==4.5.0  # Adjust version as needed
+asgiref==3.8.1
+Django==4.2
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+dnspython==2.7.0
+pymongo==4.5.0
+sqlparse==0.5.3
+tzdata==2025.1
