--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^3.5.1",
+    "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
